[package]
name = "arete-sdk"
description = "Project Arete SDK for Rust"
keywords = ["padi", "arete", "smart-buildings", "iot"]
categories = ["network-programming", "api-bindings"]
version = "0.1.1"
homepage = "https://padi.io"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23.31", features = ["ring"] }
