[package]
name = "arete-sdk"
description = "The Project Arete SDK"
authors = ["Arete Developers <arete@padi.io>"]
keywords = ["padi", "arete", "smart-buildings", "iot"]
categories = ["network-programming", "api-bindings"]
version = "0.1.2"
homepage = "https://padi.io"
edition = "2024"
license = "MIT"

[dependencies]
tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
serde_json = "1.0"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.15", features = ["v4", "v5"] }

[dev-dependencies]
[target.'cfg(target_os = "linux")'.dev-dependencies.gpio-cdev]
version = "0.6.0"

[[example]]
name = "01-switch"
path = "examples/01_the_switch_and_the_light/switch.rs"
