[package]
name = "arete-sdk"
description = "The Project Arete SDK"
authors = ["Arete Developers <arete@padi.io>"]
keywords = ["padi", "arete", "smart-buildings", "iot"]
categories = ["network-programming", "api-bindings"]
repository = "https://github.com/project-arete/sdk.git"
version = "0.1.4"
homepage = "https://padi.io"
edition = "2024"
license = "MIT"

[dependencies]
hostname = "0.4.1"
regex = "1.11.1"
rustls = { version = "0.23", features = ["ring"] }
serde_json = "1.0"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1.15", features = ["v4", "v5"] }

[dev-dependencies]
[target.'cfg(target_os = "linux")'.dev-dependencies.gpio-cdev]
version = "0.6.0"

[[example]]
name = "01-switch"
path = "examples/01_the_switch_and_the_light/switch.rs"

[[example]]
name = "01-light"
path = "examples/01_the_switch_and_the_light/light.rs"
